t.txt
In file included from C:/msys64/mingw64/include/c++/14.2.0/string:49,
                 from C:/opencv/install/include/opencv2/core/cvstd.hpp:56,
                 from C:/opencv/install/include/opencv2/core/base.hpp:58,
                 from C:/opencv/install/include/opencv2/core.hpp:53,
                 from C:/opencv/install/include/opencv2/opencv.hpp:52,
                 from src/detect_faces.cpp:1:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h: In instantiation of 'constexpr bool std::less<_Tp>::operator()(const _Tp&, const _Tp&) const [with _Tp = cv::Point_<float>]':
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_map.h:531:32:   required from 'std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](key_type&&) [with _Key = cv::Point_<float>; _Tp = int; _Compare = std::less<cv::Point_<float> >; _Alloc = std::allocator<std::pair<const cv::Point_<float>, int> >; mapped_type = int; key_type = cv::Point_<float>]'
  531 |         if (__i == end() || key_comp()(__k, (*__i).first))
      |                             ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
src/detect_faces.cpp:19:27:   required from here
   19 |             pointCounts[pt]++; // Comptabiliser les occurrences des points
      |                           ^
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h:405:20: error: no match for 'operator<' (operand types are 'const cv::Point_<float>' and 'const cv::Point_<float>')
  405 |       { return __x < __y; }
      |                ~~~~^~~~~
In file included from C:/msys64/mingw64/include/c++/14.2.0/bits/stl_algobase.h:64,
                 from C:/msys64/mingw64/include/c++/14.2.0/algorithm:60,
                 from C:/opencv/install/include/opencv2/core/base.hpp:55:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_pair.h:1045:5: note: candidate: 'template<class _T1, class _T2> constexpr bool std::operator<(const pair<_T1, _T2>&, const pair<_T1, _T2>&)'
 1045 |     operator<(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_pair.h:1045:5: note:   template argument deduction/substitution failed:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h:405:20: note:   'const cv::Point_<float>' is not derived from 'const std::pair<_T1, _T2>'
  405 |       { return __x < __y; }
      |                ~~~~^~~~~
In file included from C:/msys64/mingw64/include/c++/14.2.0/bits/stl_algobase.h:67:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_iterator.h:448:5: note: candidate: 'template<class _Iterator> constexpr bool std::operator<(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)'
  448 |     operator<(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h:405:20: note:   'const cv::Point_<float>' is not derived from 'const std::reverse_iterator<_Iterator>'
  405 |       { return __x < __y; }
      |                ~~~~^~~~~
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_iterator.h:493:5: note: candidate: 'template<class _IteratorL, class _IteratorR> constexpr bool std::operator<(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)'
  493 |     operator<(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h:405:20: note:   'const cv::Point_<float>' is not derived from 'const std::reverse_iterator<_Iterator>'
  405 |       { return __x < __y; }
      |                ~~~~^~~~~
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_iterator.h:1694:5: note: candidate: 'template<class _IteratorL, class _IteratorR> constexpr bool std::operator<(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)'
 1694 |     operator<(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_iterator.h:1694:5: note:   template argument deduction/substitution failed:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h:405:20: note:   'const cv::Point_<float>' is not derived from 'const std::move_iterator<_IteratorL>'
  405 |       { return __x < __y; }
      |                ~~~~^~~~~
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_iterator.h:1759:5: note: candidate: 'template<class _Iterator> constexpr bool std::operator<(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)'
 1759 |     operator<(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_iterator.h:1759:5: note:   template argument deduction/substitution failed:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h:405:20: note:   'const cv::Point_<float>' is not derived from 'const std::move_iterator<_IteratorL>'
  405 |       { return __x < __y; }
      |                ~~~~^~~~~
In file included from C:/opencv/install/include/opencv2/core.hpp:58:
C:/opencv/install/include/opencv2/core/mat.hpp:3704:9: note: candidate: 'template<class _Tp, int m, int n> cv::MatExpr cv::operator<(const Mat&, const Matx<_Tp, m, n>&)'
 3704 | MatExpr operator < (const Mat& a, const Matx<_Tp, m, n>& b) { return a < Mat(b); }
      |         ^~~~~~~~
C:/opencv/install/include/opencv2/core/mat.hpp:3704:9: note:   template argument deduction/substitution failed:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h:405:20: note:   'const cv::Point_<float>' is not derived from 'const cv::Matx<_Tp, m, n>'
  405 |       { return __x < __y; }
      |                ~~~~^~~~~
C:/opencv/install/include/opencv2/core/mat.hpp:3706:9: note: candidate: 'template<class _Tp, int m, int n> cv::MatExpr cv::operator<(const Matx<_Tp, m, n>&, const Mat&)'
 3706 | MatExpr operator < (const Matx<_Tp, m, n>& a, const Mat& b) { return Mat(a) < b; }
      |         ^~~~~~~~
C:/opencv/install/include/opencv2/core/mat.hpp:3706:9: note:   template argument deduction/substitution failed:
C:/msys64/mingw64/include/c++/14.2.0/bits/stl_function.h:405:20: note:   'const cv::Point_<float>' is not derived from 'const cv::Matx<_Tp, m, n>'
  405 |       { return __x < __y; }
      |                ~~~~^~~~~
C:/opencv/install/include/opencv2/core/mat.hpp:3700:20: note: candidate: 'cv::MatExpr cv::operator<(const Mat&, const Mat&)'
 3700 | CV_EXPORTS MatExpr operator < (const Mat& a, const Mat& b);
      |                    ^~~~~~~~
C:/opencv/install/include/opencv2/core/mat.hpp:3700:43: note:   no known conversion for argument 1 from 'const cv::Point_<float>' to 'const cv::Mat&'
 3700 | CV_EXPORTS MatExpr operator < (const Mat& a, const Mat& b);
      |                                ~~~~~~~~~~~^
C:/opencv/install/include/opencv2/core/mat.hpp:3701:20: note: candidate: 'cv::MatExpr cv::operator<(const Mat&, double)'
 3701 | CV_EXPORTS MatExpr operator < (const Mat& a, double s);
      |                    ^~~~~~~~
C:/opencv/install/include/opencv2/core/mat.hpp:3701:43: note:   no known conversion for argument 1 from 'const cv::Point_<float>' to 'const cv::Mat&'
 3701 | CV_EXPORTS MatExpr operator < (const Mat& a, double s);
      |                                ~~~~~~~~~~~^
C:/opencv/install/include/opencv2/core/mat.hpp:3702:20: note: candidate: 'cv::MatExpr cv::operator<(double, const Mat&)'
 3702 | CV_EXPORTS MatExpr operator < (double s, const Mat& a);
      |                    ^~~~~~~~
C:/opencv/install/include/opencv2/core/mat.hpp:3702:39: note:   no known conversion for argument 1 from 'const cv::Point_<float>' to 'double'
 3702 | CV_EXPORTS MatExpr operator < (double s, const Mat& a);
      |                                ~~~~~~~^
In file included from C:/opencv/install/include/opencv2/core/mat.hpp:3812:
C:/opencv/install/include/opencv2/core/mat.inl.hpp:2404:6: note: candidate: 'bool cv::operator<(const MatConstIterator&, const MatConstIterator&)'
 2404 | bool operator < (const MatConstIterator& a, const MatConstIterator& b)
      |      ^~~~~~~~
C:/opencv/install/include/opencv2/core/mat.inl.hpp:2404:42: note:   no known conversion for argument 1 from 'const cv::Point_<float>' to 'const cv::MatConstIterator&'
 2404 | bool operator < (const MatConstIterator& a, const MatConstIterator& b)
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~^
In file included from C:/opencv/install/include/opencv2/core.hpp:59:
C:/opencv/install/include/opencv2/core/persistence.hpp:1267:6: note: candidate: 'bool cv::operator<(const FileNodeIterator&, const FileNodeIterator&)'
 1267 | bool operator < (const FileNodeIterator& it1, const FileNodeIterator& it2)
      |      ^~~~~~~~
C:/opencv/install/include/opencv2/core/persistence.hpp:1267:42: note:   no known conversion for argument 1 from 'const cv::Point_<float>' to 'const cv::FileNodeIterator&'
 1267 | bool operator < (const FileNodeIterator& it1, const FileNodeIterator& it2)
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~^~~
